vitrail-pg-macros/tests/ui/fail/update_in_without_variables.stderr
error: update filters using `eq(...)`, `in(...)`, or `not(...)` require `#[vitrail(variables = YourVariablesType)]`
  --> tests/ui/fail/update_in_without_variables.rs:28:8
   |
28 | struct PublishPostsByIds;
   |        ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `PublishPostsByIds: vitrail_pg_core::UpdateManyModel` is not satisfied
  --> tests/ui/fail/update_in_without_variables.rs:31:49
   |
31 |     let _ = crate::update_schema::update_many::<PublishPostsByIds>(
   |                                                 ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `vitrail_pg_core::UpdateManyModel` is not implemented for `PublishPostsByIds`
  --> tests/ui/fail/update_in_without_variables.rs:28:1
   |
28 | struct PublishPostsByIds;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `update_many`
  --> tests/ui/fail/update_in_without_variables.rs:5:1
   |
 5 | / schema! {
 6 | |     name update_schema
 7 | |
 8 | |     model post {
...  |
13 | | }
   | |_^ required by this bound in `update_many`
   = note: this error originates in the macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PublishPostsByIds: vitrail_pg_core::UpdateManyModel` is not satisfied
  --> tests/ui/fail/update_in_without_variables.rs:32:9
   |
32 |         PublishPostsData { published: true },
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `vitrail_pg_core::UpdateManyModel` is not implemented for `PublishPostsByIds`
  --> tests/ui/fail/update_in_without_variables.rs:28:1
   |
28 | struct PublishPostsByIds;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
